--- a/frontend/frontend-app/package.json
+++ b/frontend/frontend-app/package.json
@@ -13,7 +13,8 @@
     "dayjs": "^1.11.18",
     "element-ui": "^2.15.14",
     "vue": "^2.6.14",
-    "vue-router": "^3.6.5"
+    "vue-router": "^3.6.5",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
